Fix white space nowrap for selection in picker

--- a/src/components/picker/style.scss
+++ b/src/components/picker/style.scss
@@ -58,6 +58,7 @@ ul {
 		color: rgba(var(--selected-item-color));
 		fill: rgba(var(--selected-item-color));
 		font-size: small;
+		white-space: nowrap;
 	}
 	li:last-child {
 		flex-grow: 1;
